[project]
name = "dcm-formatter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gdcm>=1.1",
    "kornia>=0.8.0",
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "pydicom>=3.0.1",
    "pylibjpeg>=2.0.1",
    "pylibjpeg-libjpeg>=2.3.0",
    "tqdm>=4.67.1",
    "torch>=2.5.0"
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name="pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true